tests/suite/snapshots/suite__check__tests__check__bad-pa3-6.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-pa3-6.xi:1:22]
   │
 1 │ foo(): bool { return baz() }
   ·                      ──┬──  
   ·                        ╰──── Unbound function baz
───╯

